2011-01-20 Roman
- !!:Protocol.HTTP: "Transfer-Encoding=chunked" support is added to output request and some fixed.


2011-01-15 Roman
- SYS: Text messages encode disable for default encoding ISO-8859-1 and language "en".
- DAQ.ModBus: Syntax highlight is added for input protocol's nodes.
- DAQ.JavaLikeCalc: Syntax highlight is added for controller parameter's attributes list.
- Transport.Serial: Error message expanded for port file open.
- UI.VCAEngine: Speech synthesis from text encoding by default is set to "KOI8-R".
- UI.VCAEngine: Modify counter clear for active attributes of primitive widgets.
- UI.WebVision, UI.Vision: Use generic font for items without font set of primitive "Protocol".
- UI.WebUser: Syntax highlight is added for programm of pages.


2011-01-12 Maxim
- UI:Vision: The offset for keyboard moving of the figures or their points is set to 5 without "Shift" pressed and to 1 
              with "Shift" pressed for the primitive ElFigure.


2011-01-10 Maxim
- FIX:UI:Vision: The Qt::SmoothTransformation flag is added to the fill image's scaling function for the primitive ElFigure.


2011-01-06 Maxim
- FIX:UI:WebVision: The gif and jpg image's types support is added for the fill image of the primitive ElFigure.


2011-01-06 Roman
- SYS:Some demo-configs is changed.
- FIX:DAQ.LogicLev: PRM - config field hide is added for "Free" mode. To info control request of a parameter "return" added.


2011-01-02 Roman
- DAQ.BFN: XML parse errors is hide.
- DAQ.OPC_UA: Nodes list field height is increased.
- !:UI.WebCfgD: Icon resize is add to server side for traffic decrease.


2010-12-28 Roman
- !:SYS.TMess: Generic messages of controll interface is moved to single static functions TMess::lab*. For now moved messages:
    DB selection help, seconds and CRON value seting help and selection variants.
    Seconds and CRON value set help is expanded.
- FIX:SYS.TCntrNode: No signed type "char" using as signed is fixed for ARM.